feat: add pagination in the heatmap page. add playerId filtering in the heatmap graph.
